--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ seaborn>=0.11.0
 scikit-learn>=1.0.0
 jupyter>=1.0.0
 notebook>=6.4.0
-tensorflow>=2.10.0; python_version<"3.12"
+tensorflow>=2.8.0
+torch>=1.12.0
+torchvision>=0.13.0
 # Note: TensorFlow requires Python < 3.12. For Python 3.13+, use alternative ML libraries 
